src/test/ui/const-generics/intrinsics-type_name-as-const-argument.min.stderr
error: generic parameters must not be used inside of non-trivial constant values
  --> $DIR/intrinsics-type_name-as-const-argument.rs:15:44
   |
LL |     T: Trait<{std::intrinsics::type_name::<T>()}>
   |                                            ^ non-trivial anonymous constants must not depend on the parameter `T`
   |
   = note: type parameters are currently not permitted in anonymous constants

error: `&'static str` is forbidden as the type of a const generic parameter
  --> $DIR/intrinsics-type_name-as-const-argument.rs:10:22
   |
LL | trait Trait<const S: &'static str> {}
   |                      ^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = note: more complex types are supported with `#[feature(const_generics)]`

error: aborting due to 2 previous errors

